--- a/app/views/inquiries/_form.html.erb
+++ b/app/views/inquiries/_form.html.erb
@@ -59,7 +59,8 @@
     </div>
     <div class = "col-sm-3">
       <%= w.label :wedding_date, "Date" %>
-      <%= w.date_field :wedding_date, "data-provide" => 'datepicker', "data-date-format" => 'yyyy-mm-dd'  %> 
+
+      <%= w.date_field :wedding_date,  "data-provide" => 'datepicker', "data-date-format" => 'yyyy-mm-dd'  %> 
       <!-- add a hidden field for the formated date -->
 
     </div>
@@ -178,15 +179,25 @@
                 var el = document.getElementById('openEmailClient')
                 el.href = mailTo
                 el.style.visibility = 'visible'
-
+                //<!--add the email history in a table-->
+                
               }).catch(function (e) { alert('Error getting email template') })
             }
           }).catch(function (e) { alert('Error getting email template') })
           return false
+          
         }
+       
      </script>
 
-    <!--add the email history in a table-->
+    <script type="text/javascript">
+      function setHistory  (val1) {
+        
+        var oTemplate = document.getElementById('etemp_id')
+        var templateid = oTemplate.value
+        
+      }
+    </script>
       <div class="panel panel-info">
         <div class="panel-heading">Email History &emsp;&emsp; 
        <!--<%= link_to  %> -->
@@ -201,7 +212,7 @@
             <!--add button to send email--> 
            
            &emsp;
-           <a id="openEmailClient" href="#" style="visibility: hidden">
+           <a id="openEmailClient" href="#" style="visibility: hidden" onclick="setHistory('help'); return true;">
 
             <span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>
            </a>
@@ -211,19 +222,19 @@
       
        <!--<div class = "row" >-->
        <!--  <div class = "col col-sm-3">-->
+                  
+
            <table >
             <tr>
               <th width  = "140px">Date sent</th>
               <th width  = "180px">Template </th>
             </tr>
-          
+            
             <!-- todo change this from fields to output text -->
             <% @inquiry.email_histories.each do |e| %>
-           
             <tr>
               <td> <%= e.date_sent %> </td>
-                  
-             <td>  <%= e.email_template.template_title %></td>
+             <td>  <%= e.email_template.template_title %> </td>
              
              </tr>
              <% end %>
