--- a/app/views/inquiries/_form.html.erb
+++ b/app/views/inquiries/_form.html.erb
@@ -111,154 +111,153 @@
     </div>
   </div>
   <!--end buttons to clopse/book-->
-  <div class="row" >
-    <div class = "col-sm-4">
-      <div class="field">
-        <%= f.label :contacted_email %>
-        <%= f.check_box :contacted_email %>
-      </div>
-   
-      <div class="field">
-        <%= f.label :email_sent_date %>
-        <%= f.date_field :email_sent_date, "data-provide" => 'datepicker', "data-date-format" => 'yyyy-mm-dd'  %>
-        <!--<%= f.date_select :email_sent_date, include_blank: true, use_month_numbers:  true, order: [:month,:day,  :year] %>-->
-      </div>
-     </div>
-    <div class = "col-sm-4">
-      <div class="field">
-        <%= f.label :second_email %>
-        <%= f.check_box :second_email %>
-      </div>
-    
-      <div class="field">
-        <%= f.label :second_email_date %>
-        <%= f.date_field :second_email_date, "data-provide" => 'datepicker', "data-date-format" => 'yyyy-mm-dd'  %>
 
-        <!--<%= f.date_select :second_email_date, include_blank: true, use_month_numbers:  true, order: [:month,:day,  :year] %>-->
-      </div>
-    </div>
-    <div class = "col-sm-4"> 
-      <div class="field">
-        <%= f.label :contacted_phone %>
-        <%= f.check_box :contacted_phone %>
-      </div>
-    
-      <div class="field">
-        <%= f.label :phone_call_date %>
-        <%= f.date_field :phone_call_date,"data-provide" => 'datepicker', "data-date-format" => 'yyyy-mm-dd'  %>
-        <!--<%= f.date_select :phone_call_date , include_blank: true,use_month_numbers:  true, order: [ :month, :day,:year] %>-->
-      </div>
-    </div>
-   
-    </div>
-    <div class = "row last-item" >
-      <div class = "col col-sm-6">
+  <%= link_to "shaow History", "#" , id: "inquiry-history" %>
+  <section id="show-inquiry-history"> 
+    <div class="row" >
+      <div class = "col-sm-4">
         <div class="field">
-          <%= f.label :intro_meeting %>
-          <%= f.check_box :intro_meeting %>
+          <%= f.label :contacted_email %>
+          <%= f.check_box :contacted_email %>
+        </div>
+     
+        <div class="field">
+          <%= f.label :email_sent_date %>
+          <%= f.date_field :email_sent_date, "data-provide" => 'datepicker', "data-date-format" => 'yyyy-mm-dd'  %>
+          <!--<%= f.date_select :email_sent_date, include_blank: true, use_month_numbers:  true, order: [:month,:day,  :year] %>-->
+        </div>
+       </div>
+      <div class = "col-sm-4">
+        <div class="field">
+          <%= f.label :second_email %>
+          <%= f.check_box :second_email %>
         </div>
       
-        <div class="field " >
-          <%= f.label :meeting_date %>
-          <%= f.date_field :meeting_date,  "data-provide" => 'datepicker', "data-date-format" => 'yyyy-mm-dd'  %>
-        </div><br />
-       </div>
-    </div>
+        <div class="field">
+          <%= f.label :second_email_date %>
+          <%= f.date_field :second_email_date, "data-provide" => 'datepicker', "data-date-format" => 'yyyy-mm-dd'  %>
+
+          <!--<%= f.date_select :second_email_date, include_blank: true, use_month_numbers:  true, order: [:month,:day,  :year] %>-->
+        </div>
+      </div>
+      <div class = "col-sm-4"> 
+        <div class="field">
+          <%= f.label :contacted_phone %>
+          <%= f.check_box :contacted_phone %>
+        </div>
       
+        <div class="field">
+          <%= f.label :phone_call_date %>
+          <%= f.date_field :phone_call_date,"data-provide" => 'datepicker', "data-date-format" => 'yyyy-mm-dd'  %>
+          <!--<%= f.date_select :phone_call_date , include_blank: true,use_month_numbers:  true, order: [ :month, :day,:year] %>-->
+        </div>
+      </div>
+     
+      </div>
+      <div class = "row last-item" >
+        <div class = "col col-sm-6">
+          <div class="field">
+            <%= f.label :intro_meeting %>
+            <%= f.check_box :intro_meeting %>
+          </div>
+        
+          <div class="field " >
+            <%= f.label :meeting_date %>
+            <%= f.date_field :meeting_date,  "data-provide" => 'datepicker', "data-date-format" => 'yyyy-mm-dd'  %>
+          </div><br />
+         </div>
+      </div>
+        
 
-      <script>
-        var emailTo = '<%= @inquiry.wedding.bride_email %>'
-        var emailSubject = 'Wedding ' +'<%= @inquiry.wedding.wedding_date.to_s %>'
-        var userSignature = '<%= current_user.first_name  %>' +" " +'<%= current_user.last_name %>'
-        var userSignature =userSignature + '\n' +'<%= current_user.email %>' +'\n' +'<%= current_user.user_phone %>'
-        function onTemplateSelectChange (event) {
-          var templateId = event.target.value
-          fetch('<%= email_templates_url %>/' + templateId + '.json').then(function (response) {
-            if (response.ok) {
-              response.json().then(function (data) {
+        <script>
+          var emailTo = '<%= @inquiry.wedding.bride_email %>'
+          var emailSubject = 'Wedding ' +'<%= @inquiry.wedding.wedding_date.to_s %>'
+          var userSignature = '<%= current_user.first_name  %>' +" " +'<%= current_user.last_name %>'
+          var userSignature =userSignature + '\n' +'<%= current_user.email %>' +'\n' +'<%= current_user.user_phone %>'
+          function onTemplateSelectChange (event) {
+            var templateId = event.target.value
+            fetch('<%= email_templates_url %>/' + templateId + '.json').then(function (response) {
+              if (response.ok) {
+                response.json().then(function (data) {
+                  var emailBody =  '<%= @inquiry.email_salutation %>' +',' + data.body + '\n\n' + userSignature
+                  
+                  var mailTo = "mailto:" + emailTo + 
+                               "?subject=" + encodeURIComponent(emailSubject) + 
+                               "&body=" + encodeURIComponent(emailBody)
+                  var el = document.getElementById('openEmailClient')
+                  el.href = mailTo
+                  el.style.visibility = 'visible'
+                  //<!--add the email history in a table-->
+                  
+                }).catch(function (e) { alert('Error getting email template') })
+              }
+            }).catch(function (e) { alert('Error getting email template') })
+            return false
+            
+          }
+         
+       </script>
 
-                var emailBody =  '<%= @inquiry.email_salutation %>' +',' + data.body + '\n\n' + userSignature
-                
-
-                var mailTo = "mailto:" + emailTo + 
-                             "?subject=" + encodeURIComponent(emailSubject) + 
-                             "&body=" + encodeURIComponent(emailBody)
-
-                var el = document.getElementById('openEmailClient')
-                el.href = mailTo
-                el.style.visibility = 'visible'
-                //<!--add the email history in a table-->
-                
-              }).catch(function (e) { alert('Error getting email template') })
-            }
-          }).catch(function (e) { alert('Error getting email template') })
-          return false
+      <script type="text/javascript">
+        function setHistory  (val1) {
+          
+          var oTemplate = document.getElementById('etemp_id')
+          var templateid = oTemplate.value
           
         }
-       
-     </script>
+      </script>
+        <div class="panel panel-info">
+          <div class="panel-heading">Email History &emsp;&emsp; 
+         <!--<%= link_to  %> -->
+             <%# @inquiry.send_inquiry_email %>  
 
-    <script type="text/javascript">
-      function setHistory  (val1) {
-        
-        var oTemplate = document.getElementById('etemp_id')
-        var templateid = oTemplate.value
-        
-      }
-    </script>
-      <div class="panel panel-info">
-        <div class="panel-heading">Email History &emsp;&emsp; 
-       <!--<%= link_to  %> -->
-           <%# @inquiry.send_inquiry_email %>  
-
-           &emsp;&emsp;
-           <% templates = EmailTemplate
-                            .where("template_type='Request'")
-                            .where("user_id=0 or user_id=?" , 
-                              session[:user_id]).order(:template_title).collect {|et| [et.template_title, et.id]} %>
-           <%= select "etemp", "id",  templates, {include_blank: 'None'}, { onchange: 'onTemplateSelectChange(event)' } %>
-            <!--add button to send email--> 
-           
-           &emsp;
-           <a id="openEmailClient" href="#" style="visibility: hidden" onclick="setHistory('help'); return true;">
-
-            <span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>
-           </a>
-
-             <!--<span class ="btn btn-small btn-info"> Send email  <i class = 'fa fa-envelope' ></i> </span>-->
-          </div>
-      
-       <!--<div class = "row" >-->
-       <!--  <div class = "col col-sm-3">-->
-                  
-
-           <table >
-            <tr>
-              <th width  = "140px">Date sent</th>
-              <th width  = "180px">Template </th>
-            </tr>
-            
-            <!-- todo change this from fields to output text -->
-            <% @inquiry.email_histories.each do |e| %>
-            <tr>
-              <td> <%= e.date_sent %> </td>
-             <td>  <%= e.email_template.template_title %> </td>
+             &emsp;&emsp;
+             <% templates = EmailTemplate
+                              .where("template_type='Request'")
+                              .where("user_id=0 or user_id=?" , 
+                                session[:user_id]).order(:template_title).collect {|et| [et.template_title, et.id]} %>
+             <%= select "etemp", "id",  templates, {include_blank: 'None'}, { onchange: 'onTemplateSelectChange(event)' } %>
+              <!--add button to send email--> 
              
-             </tr>
-             <% end %>
-           
-          </table>
-       <!--  </div>-->
-       <!--</div>-->
-    </div>
-    <span class = "last-item"></span>
-  
+             &emsp;
+             <a id="openEmailClient" href="#" style="visibility: hidden" onclick="setHistory('help'); return true;">
+
+              <span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>
+             </a>
+
+               <!--<span class ="btn btn-small btn-info"> Send email  <i class = 'fa fa-envelope' ></i> </span>-->
+            </div>
+        
+         <!--<div class = "row" >-->
+         <!--  <div class = "col col-sm-3">-->
+                    
+
+             <table >
+              <tr>
+                <th width  = "140px">Date sent</th>
+                <th width  = "180px">Template </th>
+              </tr>
+              
+              <!-- todo change this from fields to output text -->
+              <% @inquiry.email_histories.each do |e| %>
+              <tr>
+                <td> <%= e.date_sent %> </td>
+               <td>  <%= e.email_template.template_title %> </td>
+               
+               </tr>
+               <% end %>
+             
+            </table>
+         <!--  </div>-->
+         <!--</div>-->
+      </div>
+      <span class = "last-item"></span>
+    
+     
+        
+
    
-      
-
- 
-  </div> <!--end fluid container -->
- 
-  
+    </div> <!--end fluid container -->
+   
+  </section>
 <% end %>
-
