--- a/app/views/inquiries/_form.html.erb
+++ b/app/views/inquiries/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(inquiry) do |f| %>
+<%= form_for [@inquiry ], remote: true do |f| %>
   <% if inquiry.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(inquiry.errors.count, "error") %> prohibited this inquiry from being saved:</h2>
@@ -86,7 +86,7 @@
     
   </div>
   <!--end location -->
-    <% end %>
+<% end %>
    
   </div>  <!--end wedding-->
  
@@ -153,7 +153,7 @@
         </div>
       </div>
      
-      </div>
+    </div>
       <div class = "row last-item" >
         <div class = "col col-sm-6">
           <div class="field">
@@ -227,9 +227,9 @@
 
                <!--<span class ="btn btn-small btn-info"> Send email  <i class = 'fa fa-envelope' ></i> </span>-->
             </div>
-        
-         <!--<div class = "row" >-->
-         <!--  <div class = "col col-sm-3">-->
+            
+         <div class = "row" >
+           <div class = "col col-sm-3">
                     
 
              <table >
@@ -237,27 +237,26 @@
                 <th width  = "140px">Date sent</th>
                 <th width  = "180px">Template </th>
               </tr>
-              
-              <!-- todo change this from fields to output text -->
-              <% @inquiry.email_histories.each do |e| %>
-              <tr>
-                <td> <%= e.date_sent %> </td>
-               <td>  <%= e.email_template.template_title %> </td>
-               
-               </tr>
-               <% end %>
-             
-            </table>
-         <!--  </div>-->
-         <!--</div>-->
+              <section id = 'inquiry-email-history'>
+                <!-- todo change this from fields to output text -->
+                 <%= f.fields_for :email_histories do |builder| %>
+                  <div>
+                    <%= render "email_history", :f => builder %>
+                  </div>
+                  <% end %>
+               </section>
+              </table>
+           </div>
+         </div>
+        
       </div>
       <span class = "last-item"></span>
     
      
         
-
+  
+  </section>
    
     </div> <!--end fluid container -->
-   
-  </section>
+ 
 <% end %>
