--- a/app/views/weddings/_admin_form.html.erb
+++ b/app/views/weddings/_admin_form.html.erb
@@ -69,7 +69,7 @@
     
     <div class = "col-sm-3">
       <%= f.label :wedding_date, "Date" %>
-      <%= f.date_field :wedding_date, :size => "15", "data-provide" => 'datepicker'   %> 
+      <%= f.date_field :wedding_date, :size => "15", "data-provide" => 'datepicker', "data-date-format" => 'yyyy-mm-dd'     %> 
       
     </div>
     <div class = "col-sm-3">
