--- a/app/views/email_templates/edit.html.erb
+++ b/app/views/email_templates/edit.html.erb
@@ -1,2 +1,3 @@
-<h1>EmailTemplates#edit</h1>
-<p>Find me in app/views/email_templates/edit.html.erb</p>
+<h4>EmailTemplates#edit</h4>
+<%= render 'form' %>
+
