--- a/app/views/shared/_menu.html.erb
+++ b/app/views/shared/_menu.html.erb
@@ -39,7 +39,7 @@
                   </a>
                   <ul class="dropdown-menu" role="menu">
                     <li><%= link_to "Edit info" , edit_user_path(current_user) %></li>
-                    <li><a href="#"  onclick = "alert('under construction'); return false;">Email Templates</a></li>
+                    <!-- <li><a href="#"  onclick = "alert('under construction'); return false;">Email Templates</a></li> -->
                    
                     <!-- <li><%= link_to "email templates", root_path %></li> -->
 
