added admin lookup by date to filter booked weddings on a given date

--- a/app/views/weddings/_form.html.erb
+++ b/app/views/weddings/_form.html.erb
@@ -273,6 +273,7 @@
             </tr>
             
             <!-- todo change this from fields to output text -->
+            <!-- make this a partil for the ajax call  -->
             <% @wedding.email_histories.each do |e| %>
             <tr>
               <td> <%= e.date_sent %> </td>
