--- a/app/views/email_templates/_form.html.erb
+++ b/app/views/email_templates/_form.html.erb
@@ -13,7 +13,7 @@
       </ul>
     </div>
   <% end %>
-  <script type="text/javascript">
+ <!--  <script type="text/javascript">
     function setEmailButton () {
         // make a test email for a template
       var emailTo = '<%= current_user.email %>';
@@ -45,23 +45,25 @@
         // bbb.href = mailTo ;
       
    }
-  </script>
+  </script> -->
   <section id="template">
     <%= f.submit "Save", class: 'btn btn-success' %>
     <dir class = "form-actions">
       <div class='row'>
         <div class = 'col col-md-2'>
-          <a href = "#" id = "emailSetEnvelope"  onclick = 'setEmailButton()'>
-            <span class="glyphicon glyphicon-envelope"></span>
+          <!-- <a href = "#" id = "emailSetEnvelope"  onclick = 'setEmailButton()'> -->
+            <span class="glyphicon glyphicon-envelope">
+              <%= link_to 'preview', preview_email_template_path(@email_template) %>
+            </span>
           </a> &nbsp;
           <!-- <span class="glyphicon glyphicon-mail"></span>&nbsp; -->
         </div>
-        <div class = 'col col-md-3'>
+       <!--  <div class = 'col col-md-3'>
           <a   href="mailto:" id = "sendEmailTemplate" >send
             <span class="glyphicon glyphicon-send" aria-hidden="true"></span>
 
           </a>
-        </div>
+        </div> -->
       
       </div>
       <div class = 'row'>
