created fee report with updates to columns in model. added to menu

--- a/app/views/email_templates/new.html.erb
+++ b/app/views/email_templates/new.html.erb
@@ -1,2 +1,2 @@
-<h1>EmailTemplates#new</h1>
-<p>Find me in app/views/email_templates/new.html.erb</p>
+<h3>Make new email template</h3>
+<%= render "form" %>
