--- a/app/views/shared/_menu.html.erb
+++ b/app/views/shared/_menu.html.erb
@@ -43,7 +43,9 @@
                    
                     <!-- <li><%= link_to "email templates", root_path %></li> -->
 
-                    <li><a href="#" onclick = "alert('under construction'); return false;">Reports</a></li>
+                    <li> <%= link_to "Fee Report" , fee_report_path %> </li>
+
+                     <!-- <li><a href="#" onclick = "alert('under construction'); return false;">Reports</a></li> -->
                     <li class = "divider"></li>
                     <li><%= link_to "Log out",  log_out_path %></li>
                   </ul>
