finished the fee report with marking paid and new view to send email to admin

--- a/app/views/weddings/fee_report.html.erb
+++ b/app/views/weddings/fee_report.html.erb
@@ -1,6 +1,8 @@
 
 
 <div class = "container">
+	<%= link_to "send email", send_fee_email_path %>
+	<br><br> 
 	<table> 
 		
   <tr>
@@ -16,9 +18,15 @@
   	<tr>
     	<td><%= fee.get_title %> </td>
 			<td><%= number_to_currency(fee.referal_fee) %></td>
-			<td><%= link_to set_fee_payment_wedding_path(fee) ,  method: :post, remote: true  do  %>
-            <span class ="btn btn_secondary btn-sm btn-info"> Pay </span> 
-            <% end %></td>
+			<% if fee.fee_paid?  %>
+				<td></td>
+			<% else %>
+
+				<td><%= link_to set_fee_payment_wedding_path(fee) ,  method: :post, remote: true  do  %>
+	            <span > Pay </span> 
+
+	            <% end %></td>
+	     <% end %>
 			<td><%= check_box_tag :fee_paid , "1", fee.fee_paid %></td>
 
 			<td><%= fee.fee_paid_date %></td>
