--- a/app/views/weddings/_form.html.erb
+++ b/app/views/weddings/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@wedding) do |f| %>
+<%= form_for(@wedding, html: { multipart: true }) do |f| %>
   <% if @wedding.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@wedding.errors.count, "error") %> prohibited this wedding from being saved:</h2>
@@ -73,6 +73,7 @@
       <%= f.text_field :groom_email,:size => "25" %>
     </div> 
   </div><br/>
+
   Web date <%= @wedding.web_date %>
   <div class = "row" id = "location">
     <div class = "col-sm-5">
