got the gems for carrierwave and mini_magick to upload pictures. still needs tweeking on size and add to inquires

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -73,9 +73,11 @@ h1, h2, h3 {
     
 }
 
+/*
 .alert-notice {
   display: none;
 } 
+*/
   
 span + span {
     margin-left: 10px;
@@ -90,3 +92,12 @@ span + span {
 .last-item {
    border-bottom: 2px solid #ccc
 }
+
+/*
+.picture img {
+  border-top: 10px;
+  max-width: 60px;
+  max-height: 50px;
+ 
+}
+*/
