--- a/app/views/weddings/_form.html.erb
+++ b/app/views/weddings/_form.html.erb
@@ -253,8 +253,9 @@
             <!--add button to send email--> 
            
            &emsp;
-           <a id="openEmailClient" href="#" style="visibility: hidden" onclick = 'recordHistory(event)'>
+           <!-- <a id="openEmailClient" href="#" style="visibility: hidden" onclick = 'recordHistory(event)'> -->
 
+           <a id="openEmailClient" href="#" style="visibility: hidden" >
             <span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>
            </a>
 
