--- a/app/views/weddings/index.html.erb
+++ b/app/views/weddings/index.html.erb
@@ -7,7 +7,7 @@
   <!-- make a simple search form for all booked wedding date -->
   <%= form_tag weddings_path, method: :get do %>
     <%= date_field_tag :search , params[:search] ,"data-provide" => 'datepicker', "data-date-format" => 'yyyy-mm-dd' %>
-    <%= submit_tag "Search date" %>
+    <%= submit_tag "Search for date" %>
   <% end %> 
  <%= link_to get_new_web_requests_wedding_path(@weddings) ,  method: :get  do  %>
     <span class ="btn btn-default btn-info"> Refresh </span>
