--- a/app/views/payments/_form.html.erb
+++ b/app/views/payments/_form.html.erb
@@ -13,7 +13,7 @@
 	</tr>
 
 	<tr>
-		<td> <%= f.date_field :pmt_date %></td>
+		<td> <%= f.date_field :pmt_date ,data:{prvide:'datepicker'} %></td>
 		<td><%= f.text_field :pmt_amount %> </td>
 		<td> <%= f.text_field :pmt_type %></td>
 		<td> <%= f.text_field :pmt_method %></td>
