--- a/app/views/inquiries/_form.html.erb
+++ b/app/views/inquiries/_form.html.erb
@@ -1,4 +1,4 @@
- <%= form_for @inquiry , html: { multipart: true }  do |f| %>
+ <%= form_for @inquiry , html: { multipart: true}  do |f| %>
 
  <%= csrf_meta_tags %>
   <% if inquiry.errors.any? %>
@@ -13,10 +13,10 @@
     </div>
   <% end %>
   <div class='container-fluid'>
-    <%= f.fields_for :wedding do |w| %>
-    <div class="form-actions">
+   
       
-      <%= f.submit "Save", class: 'btn btn-success' %>
+    <%= f.submit "Save", class: 'btn btn-success' %>
+    <%= f.fields_for :wedding do |w| %>
 
     <br />
     <div class = "col-md-3 well">
@@ -29,7 +29,7 @@
     </div>
 
       <!-- end -->
-    
+  <div class="form-actions">
     <div class = "row" >
       <div class = "col-sm-3 ">
        <%= w.label :bride_first_name, "Bride" %>
@@ -49,42 +49,42 @@
       </div>
     </div>  <br />
     <!--< bride end-->
-  <div class = "row" >
-    <div class = "col-sm-3">
-      <%= w.label :groom_first_name, "Groom" %>
-      <%= w.text_field :groom_first_name,:size => "15" %>  
-    </div>
-    <div class = "col-sm-2">
-      <%= w.text_field :groom_last_name ,:size => "15"%>  
-    </div>
-    <div class = "col-sm-3">
-      <%= w.label :groom_phone, "Phone" %>
-      <%= w.text_field :groom_phone,:size => "10" %>
-    </div>
-    <div class = "col-sm-4">
-      <%= w.label :groom_email, "Email" %>
-      <%= w.text_field :groom_email,:size => "25" %>
-    </div> 
-  </div><br/> 
+    <div class = "row" >
+      <div class = "col-sm-3">
+        <%= w.label :groom_first_name, "Groom" %>
+        <%= w.text_field :groom_first_name,:size => "15" %>  
+      </div>
+      <div class = "col-sm-2">
+        <%= w.text_field :groom_last_name ,:size => "15"%>  
+      </div>
+      <div class = "col-sm-3">
+        <%= w.label :groom_phone, "Phone" %>
+        <%= w.text_field :groom_phone,:size => "10" %>
+      </div>
+      <div class = "col-sm-4">
+        <%= w.label :groom_email, "Email" %>
+        <%= w.text_field :groom_email,:size => "25" %>
+      </div> 
+    </div><br/> 
   <!--groom end -->
-  <div class = "row" >
-    <div class = "col-sm-6">
-      <%= w.label :location, "location" %>
-      <%= w.text_field :location, :size=>"45" %> 
-    </div>
-    <div class = "col-sm-3">
-      <%= w.label :wedding_date, "Date" %>
+    <div class = "row" >
+      <div class = "col-sm-6">
+        <%= w.label :location, "location" %>
+        <%= w.text_field :location, :size=>"45" %> 
+      </div>
+      <div class = "col-sm-3">
+        <%= w.label :wedding_date, "Date" %>
 
-      <%= w.date_field :wedding_date, data:{prvide:'datepicker'} %> 
-      <!-- add a hidden field for the formated date -->
+        <%= w.date_field :wedding_date, data:{prvide:'datepicker'} %> 
+        <!-- add a hidden field for the formated date -->
 
-    </div>
-    <div class = "col-sm-3">
-      <%= w.label :wedding_time, "Time" %>
-      <%= w.time_field :wedding_time, :size => "15"  %> 
-    </div>
-   
-  </div><br> 
+      </div>
+      <div class = "col-sm-3">
+        <%= w.label :wedding_time, "Time" %>
+        <%= w.time_field :wedding_time, :size => "15"  %> 
+      </div>
+     
+    </div><br> 
   <div class = "row last-item">
      <div class="field">
       <%= w.label :comments %><br/>
@@ -134,8 +134,8 @@
     </div>
   </div>
   <!--end buttons to clopse/book-->
+  <%= link_to "Show History", "#" , id: "inquiry-history" %> 
 
-  <%= link_to "shaow History", "#" , id: "inquiry-history" %>
   <section id="show-inquiry-history"> 
     <div class="row" >
       <div class = "col-sm-4">
