--- a/app/views/inquiries/index.html.erb
+++ b/app/views/inquiries/index.html.erb
@@ -7,9 +7,7 @@
   <table>
     <thead>
       <tr>
-        <th width = 110px>Wedding date</th>
-        <th width = 220px>Bride</th>
-        <th width = 220p>Groom</th>
+        <th width = 350px>Wedding </th>
         <th width = 110p>Phone</th>
         <th width = 110p>email sent date</th>
         <th width = 250p>Location</th>
@@ -22,13 +20,8 @@
     <tbody>
       <% @inquiries.each do |inquiry| %>
         <tr>
-          <td> <%=  link_to  inquiry.wedding.wedding_date, edit_inquiry_path(inquiry) %></td>
-          <td><%= inquiry.wedding.bride_first_name.strip + ' ' + inquiry.wedding.bride_last_name.strip  %></td>
-          <td><% if inquiry.wedding.groom_first_name == nil %>
-                  <%= inquiry.wedding.groom_first_name  %>
-                <% else %>
-                  <%= inquiry.wedding.groom_first_name.strip + ' ' + inquiry.wedding.groom_last_name  %>
-                <% end %></td>
+          <td> <%=  link_to  inquiry.wedding.get_title, edit_inquiry_path(inquiry) %></td>
+        
           <td><%= inquiry.wedding.bride_phone %></td>
            <td><%= inquiry.email_sent_date %></td>
           <td><%= inquiry.wedding.location%></td>
